Closed Bug 595922 Opened 15 years ago Closed 14 years ago

tooltips should not show form validation message if the form element has @novalidate

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b9

People

(Reporter: rik, Assigned: mounir)

References

Details

(Keywords: testcase)

Attachments

(2 files)

When a form is marked as novalidate, title validation messages should not be displayed and the normal title attribute should be displayed.
Attached file Testcase
Summary: title validation messages should not be used if form novalidate → tooltips should not show form validation message if the form element has @novalidate
Attached patch Patch v1Splinter Review
This is preventing the tooltip to contain the error message if the form should not be validated. For approval: it's not risky and only put some polish around a feature.
Assignee: nobody → mounir.lamouri
Status: NEW → ASSIGNED
Attachment #490583 - Flags: review?(jonas)
Attachment #490583 - Flags: approval2.0?
Hmm.. I'm not sure I agree with this. @novalidate is related to submission, it doesn't actually change the validity of the various elements. Things will still match :invalid etc. So since the controls are still invalid, and thus presumably should be corrected, I don't see why the tooltip is wrong? If you don't want the tooltip, why are you putting @required/@pattern/etc on the controls?
I think an author might want to set the input type to get the widget/virtual keyboard but without any validation and/or when it has it's own validation system? In addition, one of the reason why we have this tooltip is to help the users to understand what's going on with the form validation. If we are not going to validate the form, maybe we should just not annoy them? FWIW, I was thinking of disabling :-moz-ui-invalid and :-moz-ui-valid when @novalidate is set (bug 610415). But I've no strong opinion on that and I'm fine to WONTFIX that or wait after Gecko 2.0 to see what web authors want.
But we don't do any widgets, do we? And even once we do do for example a date-picker, the date-picker always selects valid values so no tooltip should be displayed.
Comment on attachment 490583 [details] [diff] [review] Patch v1 Removing the request here for now. I'd like to understand the usecase for this first.
Attachment #490583 - Flags: review?(jonas)
Attachment #490583 - Flags: approval2.0?
Hmm.. I missed the part about the virtual keyboard, that's a pretty good point. The tooltip doesn't seem very critical to me, but changing that along with :-moz-ui-invalid and maybe even :invalid makes sense.
Comment on attachment 490583 [details] [diff] [review] Patch v1 r=me assuming you also change :-moz-ui-invalid
Attachment #490583 - Flags: review+
Attachment #490583 - Flags: approval2.0?
(In reply to comment #8) > Hmm.. I missed the part about the virtual keyboard, that's a pretty good point. > > The tooltip doesn't seem very critical to me, but changing that along with > :-moz-ui-invalid and maybe even :invalid makes sense. I will change :-moz-ui-valid and :-moz-ui-invalid to not apply on elements inside a @novalidate form. I don't think we can change :invalid. By the way, this let me wonder how to manage elements with no form?
Whiteboard: [needs-approval]
Whiteboard: [needs-approval] → [passed-try][needs-approval]
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Whiteboard: [passed-try][needs-approval]
Target Milestone: --- → mozilla2.0b9
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: