Bug 595922 - tooltips should not show form validation message if the form element has @novalidate. r+a=sicking